# Computer-Vision-Apps

./: High Quality Image Generation with Flux.1-Dev by Neuralearn.ai -P.ipynb  House Filling with Stable Diffusion by Neuralearn.ai -P.ipynb  Influencer style Product Photos by Neuralearn.ai -P.ipynb  Invoice and Receipt Data Finetuning by Neuralearn.ai -P.ipynb  Plant Disease Classification with Transformers by Neuralearn.ai - P.ipynb  README.md  Screen Projection of Tennis match by Neuralearn.ai -P.ipynb  Tennis Ball Detection by Neuralearn.ai - P.ipynb  Tennis Court Keypoints Detection by Neuralearn - P.ipynb  Tennis Player Tracking by Neuralearn.ai -P.ipynb  Zero Shot Tennis Player Detection by Neuralearn.ai - P.ipynb  grounding-dino-demo.ipynb  onnx-demo.py  onnx_example.ipynb  pyproject.toml
